@@ -1,7 +1,7 @@
 Package: RchivalTag
 Type: Package
 Title: Analyzing Archival Tagging Data
-Version: 0.0.3
+Version: 0.0.4
 Date: 2017-04-10
 Author: Robert Bauer
 Maintainer: Robert Bauer <robert.bauer@ird.fr>
@@ -11,7 +11,7 @@ Imports: plyr, akima, maptools, graphics, stats, raster, rgeos, ncdf4,
         maps, mapdata, grDevices, oceanmap, sp, methods, PBSmapping
 License: CC BY-NC-SA 4.0
 LazyLoad: yes
-Packaged: 2017-04-10 12:11:51 UTC; robert
+Packaged: 2017-04-25 09:41:56 UTC; robert
 Repository: CRAN
-Date/Publication: 2017-04-10 12:34:56 UTC
+Date/Publication: 2017-04-25 10:35:42 UTC
 NeedsCompilation: no
